Fix flickering while scrolling in mobile.

--- a/static/css/objects.css
+++ b/static/css/objects.css
@@ -1226,8 +1226,11 @@ ul.list-plain{
 {
   width: 100%;
   height: 480px;
-  overflow-x: auto;
+  overflow: auto;
   outline: none;
+  padding-left: 15px;
+  position: relative;
+  z-index: 1;
 }
 
 @media (min-width: 768px) {
